--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+p-autoComplete {
+    flex: 1 1 auto;
+    width: 1%;
+    margin-bottom: 0;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: none !important;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+:host ::ng-deep .p-autocomplete-input {
+    color: red;
+}
+
+.auto-input {
+    flex: 1 1 auto;
+    width: 1%;
+    margin-bottom: 0;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: none !important;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.p-inputtext:enabled:focus {
+    box-shadow: none;
+}
